Corrección en el mensaje de whatsapp y estilos css

--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
-    <title>TradingWorld</title>
+    <title>TradingWorld | Inicio</title>
 </head>
 <body>
     <div id="particles-js"></div>
     <header>
         <div class="contenedor">
-            <img src="img/Logotipo.png" alt=""class="logotipo">
+            <a href="index.html">
+                <img src="img/Logotipo.png" alt=""class="logotipo">
+            </a>
+            
             <nav>
-                <a href="#" class="activo">Inicio</a>
+                <a href="index.html" class="activo">Inicio</a>
                 <a href="https://www.novatostradingclub.com/productos-financieros/guia-util-de-opciones-binarias/"  target="_blank">Opciones Binarias</a>
                 <a href="https://deriv.com/es/markets/synthetic/" target="_blank">Indices Sinteticos</a>
                 <a href="https://www.novatostradingclub.com/psicotrading/psicotrading-o-psicologia-del-trading/" target="_blank">Psicotrading</a>
@@ -48,7 +51,7 @@
         <div class="grupo-1">
             <div class="box">
                 <figure>
-                    <a href="#">
+                    <a href="index.html">
                         <img src="img/Slogan.png" alt="Slogan">
                     </a>
                 </figure>
@@ -63,7 +66,7 @@
                     <a href="https://www.facebook.com/" class="fa fa-facebook" target="_blank"></a>
                     <a href="https://www.instagram.com/thetimelapse.co/" class="fa fa-instagram" target="_blank"></a>
                     <a href="https://co.pinterest.com/thetimelapseco/?invite_code=5c1487db0f454b0b9beb71d62acab57b&sender=769271317508755944" class="fa fa-pinterest" target="_blank"></a>
-                    <a href="https://api.whatsapp.com/send/?phone=573045772793&text=Hola%20,tengo%20la%20siguiene%20inquietud..." class="fa fa-whatsapp" target="_blank"></a>
+                    <a href="https://api.whatsapp.com/send/?phone=573045772793&text=Hola%20,tengo%20la%20siguiente%20inquietud..." class="fa fa-whatsapp" target="_blank"></a>
                 </div>
             </div>
         </div>
