Se hacen cambios minimos

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                 <h3 class="titulo">TradingLand</h3>
                 <br>
                     <p class="descripcion">
-                        "La meta del trader con éxito está en hacer las mejores operaciones. El dinero es secundario. Si esto le sorprende, piense en cómo trabajan el resto de profesionales. Los buenos maestros, doctores, abogados, agricultores…..ganan dinero – pero no lo cuentan mientras trabajan. Si lo hicieran, la calidad de su trabajo se resentiría.” (Alexander Elder).
+                        "La meta del trader con éxito está en hacer las mejores operaciones. El dinero es secundario. Si esto le sorprende, piense en cómo trabajan el resto de profesionales. Los buenos maestros, doctores, abogados, agricultores…..ganan dinero, pero no lo cuentan mientras trabajan. Si lo hicieran, la calidad de su trabajo se resentiría.”&nbsp&nbsp&nbsp&nbsp(Alexander Elder).
+                        <!-- &nbsp Es para agragar espacios, en este caso dentro del mismo párrafo. -->
                     </p>
                 </div>
             </div>
